Added the sign up form and the login form

--- a/Frontend/ChatInterface/src/app/Widget/landing-page/landing-page.html
+++ b/Frontend/ChatInterface/src/app/Widget/landing-page/landing-page.html
@@ -19,6 +19,7 @@
       </li>
       <li>
         <button
+          (click)="navigateToLogIn()"
           class="bg-white text-purple-600 font-semibold px-4 py-2 rounded-full hover:bg-purple-100 transition"
         >
           Get Started
@@ -43,6 +44,7 @@
         </li>
         <li>
           <button
+            (click)="navigateToLogIn()"
             class="bg-white text-purple-600 font-semibold px-4 py-2 rounded-full hover:bg-purple-100 transition w-full"
             (click)="menuDrop = false"
           >
@@ -70,6 +72,7 @@
       </p>
       <div class="mt-8 flex space-x-4">
         <button
+          (click)="navigateToLogIn()"
           class="bg-white text-purple-600 font-semibold px-6 py-3 rounded-full hover:bg-purple-100 transition"
         >
           Try it now
