--- a/Frontend/ChatInterface/src/app/Widget/chat-bar/chat-bar.html
+++ b/Frontend/ChatInterface/src/app/Widget/chat-bar/chat-bar.html
@@ -8,14 +8,14 @@
       class="flex items-center hover:bg-purple-600 rounded-xl cursor-pointer transition-colors duration-200"
     >
       <img
-        [src]="user.image"
-        [alt]="user.name"
+        [src]="user.imageUrl"
+        [alt]="user.nom"
         class="rounded-full w-10 h-10 object-cover"
       />
       <span
         class="opacity-0 group-hover:opacity-100 transition-opacity duration-300"
       >
-        {{ user.name }}
+        {{ user.nom }}
       </span>
     </li>
     }
