--- a/Frontend/ChatInterface/src/app/Widget/log-in/log-in.html
+++ b/Frontend/ChatInterface/src/app/Widget/log-in/log-in.html
@@ -12,6 +12,7 @@
       <div class="flex flex-col space-y-2">
         <label for="email" class="text-white font-medium">Email</label>
         <input
+          formControlName="email"
           type="email"
           id="email"
           placeholder="Enter your email"
@@ -22,6 +23,7 @@
       <div class="flex flex-col space-y-2">
         <label for="password" class="text-white font-medium">Password</label>
         <input
+          formControlName="password"
           type="password"
           id="password"
           placeholder="••••••••"
