--- a/Frontend/ChatInterface/src/app/Widget/chat-bar/chat-bar.html
+++ b/Frontend/ChatInterface/src/app/Widget/chat-bar/chat-bar.html
@@ -2,7 +2,7 @@
   class="h-full w-fit group bg-linear-to-t from-purple-500 to-purple-700 text-white p-4 transition-all duration-300 hover:w-48 overflow-hidden"
 >
   <ul class="flex flex-col space-y-4 mt-6">
-    @for (user of users; track $index) {
+    @if (users().length>0) { @for (user of users(); track $index) {
     <li
       (click)="selectUser(user)"
       class="flex items-center hover:bg-purple-600 rounded-xl cursor-pointer transition-colors duration-200"
@@ -18,6 +18,6 @@
         {{ user.nom }}
       </span>
     </li>
-    }
+    }}
   </ul>
 </div>
