--- a/Frontend/ChatInterface/src/app/Widget/sign-up/sign-up.html
+++ b/Frontend/ChatInterface/src/app/Widget/sign-up/sign-up.html
@@ -4,7 +4,7 @@
   <div
     class="flex flex-col backdrop-blur-lg border border-white/20 rounded-2xl shadow-2xl p-8 w-96"
   >
-    <form class="flex flex-col space-y-5">
+    <form [formGroup]="signUpForm" class="flex flex-col space-y-5">
       <div class="flex flex-col space-y-2">
         @if (i==1) {
 
@@ -72,7 +72,7 @@
         <input
           id="image"
           formControlName="image"
-          (onChange)="onFileChange($event, 'image')"
+          (change)="onFileChange($event)"
           type="file"
           class="border rounded-lg text-white bg-white/20 py-2 focus:outline-none focus:ring-2 focus:ring-purple-300"
         />
@@ -102,6 +102,7 @@
           <div>
             @if (i > 1) {
             <button
+              (click)="SignUp()"
               type="button"
               class="py-2 px-3 border border-white/20 text-white bg-purple-500 hover:bg-purple-600 rounded-lg shadow-lg transition"
             >
