Fixing bug websocket

--- a/Frontend/ChatInterface/src/app/Widget/chat-bar/chat-bar.html
+++ b/Frontend/ChatInterface/src/app/Widget/chat-bar/chat-bar.html
@@ -30,7 +30,7 @@
           (click)="toggleFollow(user.id)"
           class="text-xs bg-white text-purple-700 px-2 py-1 rounded-md hover:bg-purple-200 transition"
         >
-          {{ user.isFollowed ? "Unfollow" : "Follow" }}
+          {{ user.followed ? "Unfollow" : "Follow" }}
         </button>
       </li>
       }
