--- a/Frontend/ChatInterface/src/app/ChatSpace/profile-settings/profile-settings.html
+++ b/Frontend/ChatInterface/src/app/ChatSpace/profile-settings/profile-settings.html
@@ -6,7 +6,7 @@
       Paramètres du profil
     </h2>
 
-    <form class="space-y-5">
+    <form class="space-y-5" [formGroup]="ProfilForm">
       <div class="flex flex-col items-center">
         <label
           for="image"
@@ -15,10 +15,21 @@
           Image de profil
         </label>
         <input
+          formControlName="image"
           type="file"
+          (change)="onFileChange($event)"
           id="image"
-          class="block w-full text-sm text-gray-600 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:border-purple-500"
+          class="w-full text-sm text-gray-600 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:border-purple-500 hidden"
         />
+        @if (previewImage || imageUrl) {
+        <div class="mt-2">
+          <img
+            [src]="previewImage || imageUrl"
+            alt="Preview"
+            class="w-32 h-32 object-cover rounded-lg"
+          />
+        </div>
+        }
       </div>
 
       <div class="flex flex-col">
@@ -27,6 +38,7 @@
         >
         <input
           id="nom"
+          formControlName="nom"
           type="text"
           placeholder="Entrez votre nom"
           class="border border-gray-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-purple-500 focus:border-purple-500 outline-none"
@@ -38,6 +50,7 @@
           >Prénom</label
         >
         <input
+          formControlName="prenom"
           id="Prenom"
           type="text"
           placeholder="Entrez votre prénom"
@@ -51,6 +64,7 @@
         >
         <input
           id="Username"
+          formControlName="username"
           type="text"
           placeholder="Nom d'utilisateur"
           class="border border-gray-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-purple-500 focus:border-purple-500 outline-none"
@@ -63,6 +77,7 @@
         >
         <input
           id="Email"
+          formControlName="email"
           type="email"
           placeholder="Adresse email"
           class="border border-gray-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-purple-500 focus:border-purple-500 outline-none"
@@ -70,6 +85,7 @@
       </div>
 
       <button
+        (click)="UpdateProfil()"
         type="submit"
         class="w-full bg-purple-600 text-white font-semibold py-2 rounded-lg hover:bg-purple-700 transition"
       >
