--- a/Frontend/ChatInterface/src/app/Widget/chat-bar/chat-bar.html
+++ b/Frontend/ChatInterface/src/app/Widget/chat-bar/chat-bar.html
@@ -1,23 +1,24 @@
 <div
-  class="h-full w-fit group bg-linear-to-t from-purple-500 to-purple-700 text-white p-4 transition-all duration-300 hover:w-64 overflow-hidden"
+  class="h-full w-20 group bg-linear-to-t from-purple-500 to-purple-700 text-white p-4 transition-all duration-300 hover:w-64 overflow-hidden relative"
 >
   <div class="relative">
     <input
       type="text"
       [formControl]="searchTerm"
       (input)="loadUsers()"
-      placeholder="Search users..."
+      placeholder="Rechercher..."
       class="opacity-0 group-hover:opacity-100 transition-opacity duration-300 border border-white/40 bg-transparent text-white placeholder-white/70 p-2 rounded-md w-full"
     />
-    @if (filteredUsers().content.length >0) {
+
+    @if ( filteredUsers().content.length > 0) {
     <ul
-      class="absolute bg-purple-600 mt-1 rounded-md shadow-lg z-10 w-full max-h-48 overflow-y-auto"
+      class="absolute bg-purple-600 mt-1 rounded-md shadow-lg z-20 w-full max-h-48 overflow-y-auto"
     >
       @for (user of filteredUsers().content; track $index) {
       <li
         class="flex items-center justify-between px-3 py-2 hover:bg-purple-700 cursor-pointer"
       >
-        <div class="flex items-center space-x-2">
+        <div class="flex justify-between space-x-2">
           <img
             [src]="user.imageUrl"
             [alt]="user.nom"
@@ -37,8 +38,39 @@
     </ul>
     }
   </div>
+  <h1
+    class="text-center opacity-0 group-hover:opacity-100 transition-opacity duration-300"
+  >
+    Discussion
+  </h1>
+  <ul class="flex flex-col space-y-4 mt-3">
+    @if (usersConv().content.length > 0) { @for (user of usersConv().content;
+    track $index) {
+    <li
+      (click)="selectUser(user)"
+      class="flex items-center hover:bg-purple-600 rounded-xl cursor-pointer transition-colors duration-200 px-2 py-1"
+    >
+      <img
+        [src]="user.imageUrl"
+        [alt]="user.nom"
+        class="rounded-full w-10 h-10 object-cover"
+      />
 
-  <ul class="flex flex-col space-y-4 mt-6">
+      <span
+        class="ml-2 opacity-0 group-hover:opacity-100 transition-opacity duration-300"
+      >
+        {{ user.nom }}
+      </span>
+    </li>
+    } }
+  </ul>
+
+  <h1
+    class="text-center opacity-0 group-hover:opacity-100 transition-opacity duration-300"
+  >
+    Followers
+  </h1>
+  <ul class="flex flex-col space-y-4 mt-3">
     @if (users().length > 0) { @for (user of users(); track $index) {
     <li
       (click)="selectUser(user)"
@@ -49,6 +81,34 @@
         [alt]="user.nom"
         class="rounded-full w-10 h-10 object-cover"
       />
+
+      <span
+        class="ml-2 opacity-0 group-hover:opacity-100 transition-opacity duration-300"
+      >
+        {{ user.nom }}
+      </span>
+    </li>
+    } }
+  </ul>
+
+  <h1
+    class="text-center opacity-0 group-hover:opacity-100 transition-opacity duration-300"
+  >
+    Followed
+  </h1>
+  <ul class="flex flex-col space-y-4 mt-3">
+    @if (usersFollowed().content.length) { @for (user of
+    usersFollowed().content; track $index) {
+    <li
+      (click)="selectUser(user)"
+      class="flex items-center hover:bg-purple-600 rounded-xl cursor-pointer transition-colors duration-200 px-2 py-1"
+    >
+      <img
+        [src]="user.imageUrl"
+        [alt]="user.nom"
+        class="rounded-full w-10 h-10 object-cover"
+      />
+
       <span
         class="ml-2 opacity-0 group-hover:opacity-100 transition-opacity duration-300"
       >
